fixed gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,11 +1,11 @@
 .catalog {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 200px;
   gap: 48px;
 
   @each $size,$columns in $screen-sizes {
     @media (min-width: $size) {
-      grid-template-columns: repeat($columns,1fr);
+      grid-template-columns: repeat($columns,200px);
     }
   }
 
